	Small xhtml changes to ensure tables correctly formed
	Added Image gallery for all images
	Fixed badly formed tables for image gallery
	Better xhtml support
v 1.2.5
	Pedigree page added
	Wrapper around mysql_connect & imagecreatetruecolor
	GedCom import added (experimental)
	All fields are now editable
	Can now delete anything (subject to permission)
	census re-written to allow multiple countries
	anniversaries added to index
	image upload bug fixed
	footers standardised
	style sheets made browser aware
	internationalisation files created
	converted to xhtml
v 1.2.4
	better control over failed uploaded images.
	styles sheets much cleaned up
	shortened keywords on index and people to be more "search engine friendly"
	install.php ammended to correct issue with first image creation and zero-filled db column
	html cleaned up throughout app
	session.use_trans_id set to false to help spiders
	Table prefix made ammendable (default "family")
	Forbidden page added
v 1.2.3
	Added installation instructions.
	Config files consolidated
	Proper license information added
	Tables given "family_" prefix
	image.php made w3c(HTML 4.01) compliant
	people.php made w3c(HTML 4.01) compliant (also fixes bug#000001 - html format on weddings)
	Index.php made w3c(HTML 4.01) compliant
	Meta tags added to index.php.
v 1.2.0
	Index page rearranged to allow login form
	Support added to passthru.php for login and logout
	Login form added
	Links removed to restricted people.
	Restrictions added to edit, people, image & passthru based on session and person age
	Added session.inc.php
	css.inc.php changed to use favicon
	favicon added to CVS
v 1.1.2
	Edit.php changed to use list_enums()
	Edit.php changed to use listpeeps()
	Edit.php cleaned up to limit input length on all fields
v 1.1.1
	Version control added