@@ -1,3 +1,4 @@
+	Surnames list added
 	Small xhtml changes to ensure tables correctly formed
 	Added Image gallery for all images
 	Fixed badly formed tables for image gallery
